Tests/Negative/DuplicateFieldDefinition.mr
struct S {
    var x: i32;
    var x: f64; // Error: Redefinition of 'x'
}
